# goit-python-web-hw-14

./: README.md  alembic.ini  main.py  pyproject.toml  sql_app.sqlite  test.db
alembic/: env.py
alembic/versions/: 85f4a93723d6_add_username_to_user.py  b6b913dfa5e2_add_avatar_field.py  dd3689e3ba14_add_email_verified.py
docs/source/: conf.py  index.rst
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: schemas.py
src/services/: auth.py  cloudinary_service.py  email.py
src/services/templates/: verify_email.html
tests/: conftest.py  test_route_auth.py  test_unit_services_auth.py  test_unit_services_cloudinary_service.py  test_unit_services_email.py
